[STRATO-1397] Fix: alignment issues

--- a/smd-ui/src/components/CreateChain/createChain.scss
+++ b/smd-ui/src/components/CreateChain/createChain.scss
@@ -21,8 +21,3 @@
 .member-remove:hover {
   background-color: red !important;
 }
-
-.chain-dropzone {
-  margin-left: 3px;
-  border-radius: 20px !important;
-}
